# sympife-vmax

./: CMakeLists.txt  README.md  config.txt
include/: field_functions.hpp  integrator.hpp  parameters.hpp  particle_functions.hpp  poisson_solver.hpp  vm_solver.hpp
src/: CMakeLists.txt  field_functions.cpp  integrator.cpp  parameters.cpp  particle_functions.cpp  poisson_solver.cpp  sympife.cpp  vm_solver.cpp
